--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "xushu-cli",
+  "name": "@m-xushu/cli",
   "version": "1.3.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "bin": {
     "xushu-cli": "./bin/index.js"
